# OpenCV_Rotate

./: CMakeLists.txt  README.md  main.cpp
include/: common_function.hpp
